fixed spacing on modal popup to be centered including padding

--- a/src/Components/UI/Modal.module.css
+++ b/src/Components/UI/Modal.module.css
@@ -9,12 +9,14 @@
 }
 
 .modal {
+  box-sizing: border-box;
   position: fixed;
   top: 30vh;
-  left: 10%;
-  width: 80%;
+  left: 10vw;
+  width: 80vw;
   z-index: 100;
   overflow: hidden;
+  margin: 0;
 }
 
 .header {
@@ -39,7 +41,7 @@
 
 @media (min-width: 768px) {
   .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
+    left: 25vw;
+    width: 50vw;
   }
 }
